[package]
name = "blockscape"
version = "0.0.1"
authors = ["Daniel Beal <git@danb.email>", "Matthew Conover <matt@xram.co>"]

[dependencies]
blockscape_core = { path = "core" }
bincode = "^0.8"
clap = "2.26.2"
colored = "1.5.3"
futures = "0.1"
hyper = "0.11"
isatty = "0.1"
jsonrpc-core = "^8.0.0"
jsonrpc-http-server = "^8.0.0"
jsonrpc-macros = "^8.0.0"
libc = "0.2.31"
log = "0.3"
openssl = "^0.9"
pretty_env_logger = "0.1.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-signal = "0.1"
parking_lot = "^0.5"

[[bin]]
path = "client/main.rs"
name = "blockscape"