[package]
name = "blockscape_core"
version = "0.0.1"
authors = ["Daniel Beal <git@danb.email.com>", "Matthew Conover <matt@xram.co>"]

[dependencies]
bincode = "^0.8"
bytes = { version = "^0.4", features = ["serde"] }
log = "^0.3"
openssl = "^0.9"
rand = "^0.3.16"
rust-crypto= "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
time = "0.1.38"
rocksdb = "0.8.1"