[package]
name = "blockscape_core"
version = "0.0.1"
authors = ["Daniel Beal <git@danb.email>", "Matthew Conover <matt@xram.co>"]

[dependencies]
bincode = "^0.8"
bytes = { version = "^0.4", features = ["serde"] }
dns-lookup = "0.6.0"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
futures = "0.1"
futures-cpupool = "^0.1.0"
log = "^0.3"
ntp = "0.3.0"
openssl = "^0.9"
rand = "^0.3.16"
rocksdb = "0.8.1"
rust-crypto= "^0.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
time = "0.1.38"
tokio-core = "0.1"
num_cpus = "^1.7.0"
parking_lot = "^0.5"
